openshift/itop.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: conf
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500Mi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: data
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: env-production
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500Mi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: vendor
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500Mi
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: itop
    name: itop
  spec:
    replicas: 1
    selector:
      deploymentconfig: itop
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: itop
          deploymentconfig: itop
      spec:
        containers:
        - name: itop
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/app-root/src/conf
            name: conf
          - mountPath: /opt/app-root/src/env-production
            name: env-production
          - mountPath: /opt/app-root/src/vendor
            name: vendor
          - mountPath: /opt/app-root/src/data
            name: data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: conf
          persistentVolumeClaim:
            claimName: conf
        - name: env-production
          persistentVolumeClaim:
            claimName: env-production
        - name: vendor
          persistentVolumeClaim:
            claimName: vendor
        - name: data
          persistentVolumeClaim:
            claimName: data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - itop
        from:
          kind: ImageStreamTag
          name: itop:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: itop
    name: itop
  spec:
    ports:
      - name: 8080-tcp
        port: 8080
        protocol: TCP
        targetPort: 8080
      - name: 8443-tcp
        port: 8443
        protocol: TCP
        targetPort: 8443
    selector:
      deploymentconfig: itop
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: itop
    name: itop
  spec:
    host: itop.192.168.64.7.nip.io
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: itop
      weight: 100
    wildcardPolicy: None
kind: List
metadata: {}
